fixed main page about section coloration & text alignment

--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,7 @@ header {
 /* about us section */
 .about {
     width: 100%;
-    min-height: 75vh;
+    height: 75vh;
     text-align: center;
     background-image: url("../img/staff-cooks.jpg");
     background-size: cover;
@@ -184,9 +184,10 @@ header {
 
 .about-container {
     min-height: 100%;
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
     background-color: rgb(0, 4, 17, .8);
 }
@@ -200,6 +201,9 @@ header {
 }
 
 .about-container .text {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
     width: 50%;
 }
 
